<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".investor.transactionItemFragment">

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/transaction_bg1"
        android:padding="10dp"
        android:src="@drawable/up_right_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintStart_toEndOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView28">

        <TextView
            android:id="@+id/textView132"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_transactions_4"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView133"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/i_transactions_5"
            android:textColor="@color/textGray"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_transactions_6"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout11" />

    <TextView
        android:id="@+id/textView135"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/i_transactions_7"
        android:textColor="@color/textGray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView134" />

    <View
        android:id="@+id/view14"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28" />
</androidx.constraintlayout.widget.ConstraintLayout>